// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`call.coffee 1`] = `
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee

`;

exports[`call.coffee 2`] = `
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee

`;

exports[`call.coffee 3`] = `
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# breaking implicit should never have trailing comma

f
  a: b
  c: d
,
  eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee

`;

exports[`function.coffee 1`] = `
[-> b]

a(-> b)

(a = -> b) ->

{c, a: -> b}

[
  ->
    b
]

a(
  ->
    b
)

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a(->)

(a = ->) ->

{c, a: ->}

[
  a
  ->
    b
  c
]

a(
  a
  ->
    b
  c
)

(
  a
  d = ->
    b
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[-> b]

a -> b

(a = -> b) ->

{ c, a: -> b }

[
  ->
    b
]

a ->
  b

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a ->

(a = ->) ->

{ c, a: -> }

[
  a
,
  ->
    b
,
  c
]

a(
  a
,
  ->
    b
,
  c
)

(
  a
  d = ->
    b
,
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
,
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
,
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}

`;

exports[`function.coffee 2`] = `
[-> b]

a(-> b)

(a = -> b) ->

{c, a: -> b}

[
  ->
    b
]

a(
  ->
    b
)

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a(->)

(a = ->) ->

{c, a: ->}

[
  a
  ->
    b
  c
]

a(
  a
  ->
    b
  c
)

(
  a
  d = ->
    b
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[-> b]

a -> b

(a = -> b) ->

{ c, a: -> b }

[
  ->
    b
]

a ->
  b

(
  a = ->
    b
) ->

{
  c,
  a: ->
    b
}

[->]

a ->

(a = ->) ->

{ c, a: -> }

[
  a
,
  ->
    b
,
  c
]

a(
  a
,
  ->
    b
,
  c
)

(
  a,
  d = ->
    b
,
  c
) ->

{
  a,
  d: ->
    b
  c
}

[
  a
,
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
,
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: ->
  c
}

`;

exports[`function.coffee 3`] = `
[-> b]

a(-> b)

(a = -> b) ->

{c, a: -> b}

[
  ->
    b
]

a(
  ->
    b
)

(
  a = ->
    b
) ->

{
  c
  a: ->
    b
}

[->]

a(->)

(a = ->) ->

{c, a: ->}

[
  a
  ->
    b
  c
]

a(
  a
  ->
    b
  c
)

(
  a
  d = ->
    b
  c
) ->

{
  a
  d: ->
    b
  c
}

[
  a
  ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[-> b]

a -> b

(a = -> b) ->

{ c, a: -> b }

[
  ->
    b
]

a ->
  b

(
  a = ->
    b
) ->

{
  c,
  a: ->
    b
}

[->]

a ->

(a = ->) ->

{ c, a: -> }

[
  a
,
  ->
    b
,
  c,
]

a(
  a
,
  ->
    b
,
  c,
)

(
  a,
  d = ->
    b
,
  c,
) ->

{
  a,
  d: ->
    b
  c,
}

[
  a
,
  ->
,
  c,
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
,
  ->
,
  c,
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = ->
,
  c,
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: ->
  c,
}

`;

exports[`implicit-call.coffee 1`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbb ccccccccccccccccc
  ddddddddd eeeeeeeeeeeeee
]

f(
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbb ccccccccccccccccc
  ddddddddd eeeeeeeeeeeee
)

{
  a
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
  d: ddddddddd eeeeeeee
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb ccccccccccccccccc
  d = ddddddd eeeeeeee
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb cccccccccc
  dddddddddd: eeeeeee ffffff
} if g

`;

exports[`implicit-call.coffee 2`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd eeeeeeeeeeeeee
]

f(
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd eeeeeeeeeeeee
)

{
  a,
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d: ddddddddd eeeeeeee
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d = ddddddd eeeeeeee
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc),
  dddddddddd: eeeeeee ffffff
} if g

`;

exports[`implicit-call.coffee 3`] = `
# implicit calls
[aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeeee)]

f(aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbb(ccccccccccccccccc), ddddddddd(eeeeeeeeeeeee))

{a, aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeee)}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc), d: ddddddddd(eeeeeeeeeeeee)

(aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc), d = ddddddd(eeeeeeee)) ->

# Object that omits braces if parent breaks
[a, {b: c(d), e: f(g)}, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
  h
]

[a, {b: c(d), e: f(g)}]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return {a: b(c), d: e(f)} if g

return {aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc), dddddddddd: eeeeeee(ffffff)} if g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit calls
[
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd(eeeeeeeeeeeeee),
]

f(
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  ddddddddd(eeeeeeeeeeeee),
)

{
  a,
  aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d: ddddddddd(eeeeeeee),
}

aaaaaaaaaaaaaaaaaaaa: bbbbbbbbbbbbbbbb ccccccccccccccccc
d: ddddddddd eeeeeeeeeeeee

(
  aaaaaaaaaaaaaaaaaaaa = bbbbbbbbbbbbbbbb(ccccccccccccccccc),
  d = ddddddd(eeeeeeee),
) ->

# Object that omits braces if parent breaks
[a, { b: c(d), e: f g }, h]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
,
  h,
]

[a, { b: c(d), e: f g }]

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
,
  bbbbbbb: ccccccccc dddddddddddd
  eeeeeee: fffffffff gggggggggggg
]

# Object that omits braces unless it breaks
return a: b(c), d: e f if g

return {
  aaaaaaaaaaaaaaaaaa: bbbbbbbbb(cccccccccc),
  dddddddddd: eeeeeee(ffffff),
} if g

`;

exports[`implicit-object.coffee 1`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`implicit-object.coffee 2`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`implicit-object.coffee 3`] = `
# implicit objects
[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggggggg: hhhhhhh}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, eeeeeeeeeeeeeeee, {gggg: hhh, ii: jj}]

[{aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd}, {eeeeeeeeee: ffff, gggg: hhh, ii: jj}]
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# implicit objects
[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggggggg: hhhhhhh
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeeeeeeeee
,
  gggg: hhh, ii: jj
]

[
  aaaaaaaaaaaaaaa: bbbbbbbbbbbbb, cccc: ddddd
,
  eeeeeeeeee: ffff, gggg: hhh, ii: jj
]

`;

exports[`indented-body-assignment.coffee 1`] = `
# TODO: this should be legal? See Coffeescript issue #5121
# [a = -> b]

a(c = -> b)

(a = d = -> b) ->

{c, a: d = -> b}

[
  d = ->
    b
]

a(
  d = ->
    b
)

(
  a = d = ->
    b
) ->

{
  c
  a: d = ->
    b
}

[d = ->]

a(d = ->)

(a = d = ->) ->

{c, a: d = ->}

[
  a
  d = ->
    b
  c
]

a(
  a
  d = ->
    b
  c
)

(
  a
  d = e = ->
    b
  c
) ->

{
  a
  d: e = ->
    b
  c
}

[
  a
  b = ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = e = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: e = ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# TODO: this should be legal? See Coffeescript issue #5121
# [a = -> b]

a(c = -> b)

(a = (d = -> b)) ->

{ c, a: (d = -> b) }

[
  (d = ->
    b
  )
]

a(
  (d = ->
    b
  )
)

(
  a = (d = ->
    b
  )
) ->

{
  c
  a:
    (d = ->
      b
    )
}

[(d = ->)]

a(d = ->)

(a = (d = ->)) ->

{ c, a: (d = ->) }

[
  a
  (d = ->
    b
  )
,
  c
]

a(
  a
  (d = ->
    b
  )
,
  c
)

(
  a
  d = (e = ->
    b
  )
,
  c
) ->

{
  a
  d:
    (e = ->
      b
    )
  c
}

[
  a
  (b = ->)
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  (d = ->)
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = (e = ->)
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: (e = ->)
  c
}

`;

exports[`indented-body-assignment.coffee 2`] = `
# TODO: this should be legal? See Coffeescript issue #5121
# [a = -> b]

a(c = -> b)

(a = d = -> b) ->

{c, a: d = -> b}

[
  d = ->
    b
]

a(
  d = ->
    b
)

(
  a = d = ->
    b
) ->

{
  c
  a: d = ->
    b
}

[d = ->]

a(d = ->)

(a = d = ->) ->

{c, a: d = ->}

[
  a
  d = ->
    b
  c
]

a(
  a
  d = ->
    b
  c
)

(
  a
  d = e = ->
    b
  c
) ->

{
  a
  d: e = ->
    b
  c
}

[
  a
  b = ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = e = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: e = ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# TODO: this should be legal? See Coffeescript issue #5121
# [a = -> b]

a(c = -> b)

(a = (d = -> b)) ->

{ c, a: (d = -> b) }

[
  (d = ->
    b
  )
]

a(
  (d = ->
    b
  )
)

(
  a = (d = ->
    b
  )
) ->

{
  c,
  a:
    (d = ->
      b
    )
}

[(d = ->)]

a(d = ->)

(a = (d = ->)) ->

{ c, a: (d = ->) }

[
  a,
  (d = ->
    b
  )
,
  c
]

a(
  a,
  (d = ->
    b
  )
,
  c
)

(
  a,
  d = (e = ->
    b
  )
,
  c
) ->

{
  a,
  d:
    (e = ->
      b
    )
  c
}

[
  a,
  (b = ->)
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  (d = ->)
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = (e = ->)
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: (e = ->)
  c
}

`;

exports[`indented-body-assignment.coffee 3`] = `
# TODO: this should be legal? See Coffeescript issue #5121
# [a = -> b]

a(c = -> b)

(a = d = -> b) ->

{c, a: d = -> b}

[
  d = ->
    b
]

a(
  d = ->
    b
)

(
  a = d = ->
    b
) ->

{
  c
  a: d = ->
    b
}

[d = ->]

a(d = ->)

(a = d = ->) ->

{c, a: d = ->}

[
  a
  d = ->
    b
  c
]

a(
  a
  d = ->
    b
  c
)

(
  a
  d = e = ->
    b
  c
) ->

{
  a
  d: e = ->
    b
  c
}

[
  a
  b = ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = e = ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: e = ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
# TODO: this should be legal? See Coffeescript issue #5121
# [a = -> b]

a(c = -> b)

(a = (d = -> b)) ->

{ c, a: (d = -> b) }

[
  (d = ->
    b
  )
]

a(
  (d = ->
    b
  )
)

(
  a = (d = ->
    b
  )
) ->

{
  c,
  a:
    (d = ->
      b
    )
}

[(d = ->)]

a(d = ->)

(a = (d = ->)) ->

{ c, a: (d = ->) }

[
  a,
  (d = ->
    b
  )
,
  c,
]

a(
  a,
  (d = ->
    b
  )
,
  c,
)

(
  a,
  d = (e = ->
    b
  )
,
  c,
) ->

{
  a,
  d:
    (e = ->
      b
    )
  c,
}

[
  a,
  (b = ->)
  c,
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  (d = ->)
  c,
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = (e = ->)
  c,
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: (e = ->)
  c,
}

`;

exports[`indented-body-do.coffee 1`] = `
[do -> b]

a(do -> b)

(a = do -> b) ->

{c, a: do -> b}

[
  do ->
    b
]

a(
  do ->
    b
)

(
  a = do ->
    b
) ->

{
  c
  a: do ->
    b
}

[do ->]

a(do ->)

(a = do ->) ->

{c, a: do ->}

[
  a
  do ->
    b
  c
]

a(
  a
  do ->
    b
  c
)

(
  a
  d = do ->
    b
  c
) ->

{
  a
  d: do ->
    b
  c
}

[
  a
  do ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  do ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = do ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: do ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[do -> b]

a do -> b

(a = do -> b) ->

{ c, a: do -> b }

[
  do ->
    b
]

a do ->
  b

(
  a = do ->
    b
) ->

{
  c
  a: do ->
    b
}

[do ->]

a do ->

(a = do ->) ->

{ c, a: do -> }

[
  a
  do ->
    b
,
  c
]

a(
  a
  do ->
    b
,
  c
)

(
  a
  d = do ->
    b
,
  c
) ->

{
  a
  d: do ->
    b
  c
}

[
  a
  do ->
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  do ->
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = do ->
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: do ->
  c
}

`;

exports[`indented-body-do.coffee 2`] = `
[do -> b]

a(do -> b)

(a = do -> b) ->

{c, a: do -> b}

[
  do ->
    b
]

a(
  do ->
    b
)

(
  a = do ->
    b
) ->

{
  c
  a: do ->
    b
}

[do ->]

a(do ->)

(a = do ->) ->

{c, a: do ->}

[
  a
  do ->
    b
  c
]

a(
  a
  do ->
    b
  c
)

(
  a
  d = do ->
    b
  c
) ->

{
  a
  d: do ->
    b
  c
}

[
  a
  do ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  do ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = do ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: do ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[do -> b]

a do -> b

(a = do -> b) ->

{ c, a: do -> b }

[
  do ->
    b
]

a do ->
  b

(
  a = do ->
    b
) ->

{
  c,
  a: do ->
    b
}

[do ->]

a do ->

(a = do ->) ->

{ c, a: do -> }

[
  a,
  do ->
    b
,
  c
]

a(
  a,
  do ->
    b
,
  c
)

(
  a,
  d = do ->
    b
,
  c
) ->

{
  a,
  d: do ->
    b
  c
}

[
  a,
  do ->
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  do ->
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = do ->
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: do ->
  c
}

`;

exports[`indented-body-do.coffee 3`] = `
[do -> b]

a(do -> b)

(a = do -> b) ->

{c, a: do -> b}

[
  do ->
    b
]

a(
  do ->
    b
)

(
  a = do ->
    b
) ->

{
  c
  a: do ->
    b
}

[do ->]

a(do ->)

(a = do ->) ->

{c, a: do ->}

[
  a
  do ->
    b
  c
]

a(
  a
  do ->
    b
  c
)

(
  a
  d = do ->
    b
  c
) ->

{
  a
  d: do ->
    b
  c
}

[
  a
  do ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  do ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = do ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: do ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[do -> b]

a do -> b

(a = do -> b) ->

{ c, a: do -> b }

[
  do ->
    b
]

a do ->
  b

(
  a = do ->
    b
) ->

{
  c,
  a: do ->
    b
}

[do ->]

a do ->

(a = do ->) ->

{ c, a: do -> }

[
  a,
  do ->
    b
,
  c,
]

a(
  a,
  do ->
    b
,
  c,
)

(
  a,
  d = do ->
    b
,
  c,
) ->

{
  a,
  d: do ->
    b
  c,
}

[
  a,
  do ->
  c,
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  do ->
  c,
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = do ->
  c,
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: do ->
  c,
}

`;

exports[`indented-body-if.coffee 1`] = `
[if b then c]

a(if b then c)

(a = if b then c) ->

{c, a: if b then c}

[
  if b
    c
]

a(
  if b
    c
)

(
  a = if b
    c
) ->

{
  c
  a: if b
    c
}

[
  a
  if b
    c
  d
]

a(
  a
  if b
    c
  d
)

(
  a
  d = if b
    c
  e
) ->

{
  a
  d: if b
    e
  c
}

[
  a
  if b then c
,
  d
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  if d then e
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = if e then f
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: if e then f
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[if b then c]

a if b then c

(a = if b then c) ->

{ c, a: if b then c }

[
  if b
    c
]

a(
  if b
    c
)

(
  a = if b
    c
) ->

{
  c
  a: if b
    c
}

[
  a
  if b
    c
,
  d
]

a(
  a
  if b
    c
,
  d
)

(
  a
  d = if b
    c
,
  e
) ->

{
  a
  d: if b
    e
  c
}

[a, (if b then c), d]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  if d then e
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = if e then f
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: if e then f
  c
}

`;

exports[`indented-body-if.coffee 2`] = `
[if b then c]

a(if b then c)

(a = if b then c) ->

{c, a: if b then c}

[
  if b
    c
]

a(
  if b
    c
)

(
  a = if b
    c
) ->

{
  c
  a: if b
    c
}

[
  a
  if b
    c
  d
]

a(
  a
  if b
    c
  d
)

(
  a
  d = if b
    c
  e
) ->

{
  a
  d: if b
    e
  c
}

[
  a
  if b then c
,
  d
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  if d then e
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = if e then f
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: if e then f
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[if b then c]

a if b then c

(a = if b then c) ->

{ c, a: if b then c }

[
  if b
    c
]

a(
  if b
    c
)

(
  a = if b
    c
) ->

{
  c,
  a: if b
    c
}

[
  a,
  if b
    c
,
  d
]

a(
  a,
  if b
    c
,
  d
)

(
  a,
  d = if b
    c
,
  e
) ->

{
  a,
  d: if b
    e
  c
}

[a, (if b then c), d]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  if d then e
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = if e then f
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: if e then f
  c
}

`;

exports[`indented-body-if.coffee 3`] = `
[if b then c]

a(if b then c)

(a = if b then c) ->

{c, a: if b then c}

[
  if b
    c
]

a(
  if b
    c
)

(
  a = if b
    c
) ->

{
  c
  a: if b
    c
}

[
  a
  if b
    c
  d
]

a(
  a
  if b
    c
  d
)

(
  a
  d = if b
    c
  e
) ->

{
  a
  d: if b
    e
  c
}

[
  a
  if b then c
,
  d
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  if d then e
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = if e then f
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: if e then f
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[if b then c]

a if b then c

(a = if b then c) ->

{ c, a: if b then c }

[
  if b
    c
]

a(
  if b
    c
)

(
  a = if b
    c
) ->

{
  c,
  a: if b
    c
}

[
  a,
  if b
    c
,
  d,
]

a(
  a,
  if b
    c
,
  d,
)

(
  a,
  d = if b
    c
,
  e,
) ->

{
  a,
  d: if b
    e
  c,
}

[a, (if b then c), d]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  if d then e
  c,
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = if e then f
  c,
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: if e then f
  c,
}

`;

exports[`indented-body-implicit-call.coffee 1`] = `
[a -> b]

a(c -> b)

(a = d -> b) ->

{c, a: d -> b}

[
  d ->
    b
]

a(
  d ->
    b
)

(
  a = d ->
    b
) ->

{
  c
  a: d ->
    b
}

[d ->]

a(d ->)

(a = d ->) ->

{c, a: d ->}

[
  a
  d ->
    b
  c
]

a(
  a
  d ->
    b
  c
)

(
  a
  d = e ->
    b
  c
) ->

{
  a
  d: e ->
    b
  c
}

[
  a
  b ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = e ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: e ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[a -> b]

a c -> b

(a = d -> b) ->

{ c, a: d -> b }

[
  d ->
    b
]

a(
  d ->
    b
)

(
  a = d ->
    b
) ->

{
  c
  a: d ->
    b
}

[d ->]

a d ->

(a = d ->) ->

{ c, a: d -> }

[
  a
  d ->
    b
,
  c
]

a(
  a
  d ->
    b
,
  c
)

(
  a
  d = e ->
    b
,
  c
) ->

{
  a
  d: e ->
    b
  c
}

[
  a
  b ->
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d ->
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = e ->
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: e ->
  c
}

`;

exports[`indented-body-implicit-call.coffee 2`] = `
[a -> b]

a(c -> b)

(a = d -> b) ->

{c, a: d -> b}

[
  d ->
    b
]

a(
  d ->
    b
)

(
  a = d ->
    b
) ->

{
  c
  a: d ->
    b
}

[d ->]

a(d ->)

(a = d ->) ->

{c, a: d ->}

[
  a
  d ->
    b
  c
]

a(
  a
  d ->
    b
  c
)

(
  a
  d = e ->
    b
  c
) ->

{
  a
  d: e ->
    b
  c
}

[
  a
  b ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = e ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: e ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[a -> b]

a c -> b

(a = d -> b) ->

{ c, a: d -> b }

[
  d ->
    b
]

a(
  d ->
    b
)

(
  a = d ->
    b
) ->

{
  c,
  a: d ->
    b
}

[d ->]

a d ->

(a = d ->) ->

{ c, a: d -> }

[
  a,
  d ->
    b
,
  c
]

a(
  a,
  d ->
    b
,
  c
)

(
  a,
  d = e ->
    b
,
  c
) ->

{
  a,
  d: e ->
    b
  c
}

[
  a,
  b ->
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d ->
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = e ->
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: e ->
  c
}

`;

exports[`indented-body-implicit-call.coffee 3`] = `
[a -> b]

a(c -> b)

(a = d -> b) ->

{c, a: d -> b}

[
  d ->
    b
]

a(
  d ->
    b
)

(
  a = d ->
    b
) ->

{
  c
  a: d ->
    b
}

[d ->]

a(d ->)

(a = d ->) ->

{c, a: d ->}

[
  a
  d ->
    b
  c
]

a(
  a
  d ->
    b
  c
)

(
  a
  d = e ->
    b
  c
) ->

{
  a
  d: e ->
    b
  c
}

[
  a
  b ->
,
  c
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d ->
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = e ->
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: e ->
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[a -> b]

a c -> b

(a = d -> b) ->

{ c, a: d -> b }

[
  d ->
    b
]

a(
  d ->
    b
)

(
  a = d ->
    b
) ->

{
  c,
  a: d ->
    b
}

[d ->]

a d ->

(a = d ->) ->

{ c, a: d -> }

[
  a,
  d ->
    b
,
  c,
]

a(
  a,
  d ->
    b
,
  c,
)

(
  a,
  d = e ->
    b
,
  c,
) ->

{
  a,
  d: e ->
    b
  c,
}

[
  a,
  b ->
  c,
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d ->
  c,
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = e ->
  c,
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: e ->
  c,
}

`;

exports[`indented-body-while.coffee 1`] = `
[while b then c]

a(until b then c)

(a = while b then c) ->

{c, a: while b then c}

[
  while b
    c
]

a(
  while b
    c
)

(
  a = while b
    c
) ->

{
  c
  a: while b
    c
}

[
  a
  while b
    c
  d
]

a(
  a
  while b
    c
  d
)

(
  a
  d = while b
    c
  e
) ->

{
  a
  d: while b
    e
  c
}

[
  a
  while b then c
,
  d
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  while d then e
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = while e then f
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: while e then f
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[while b then c]

a(until b then c)

(a = while b then c) ->

{ c, a: (while b then c) }

[
  while b
    c
]

a(
  while b
    c
)

(
  a = while b
    c
) ->

{
  c
  a: while b
    c
}

[
  a
  while b
    c
,
  d
]

a(
  a
  while b
    c
,
  d
)

(
  a
  d = while b
    c
,
  e
) ->

{
  a
  d: while b
    e
  c
}

[a, while b then c, d]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  while d then e
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = while e then f
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: (while e then f)
  c
}

`;

exports[`indented-body-while.coffee 2`] = `
[while b then c]

a(until b then c)

(a = while b then c) ->

{c, a: while b then c}

[
  while b
    c
]

a(
  while b
    c
)

(
  a = while b
    c
) ->

{
  c
  a: while b
    c
}

[
  a
  while b
    c
  d
]

a(
  a
  while b
    c
  d
)

(
  a
  d = while b
    c
  e
) ->

{
  a
  d: while b
    e
  c
}

[
  a
  while b then c
,
  d
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  while d then e
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = while e then f
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: while e then f
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[while b then c]

a(until b then c)

(a = while b then c) ->

{ c, a: (while b then c) }

[
  while b
    c
]

a(
  while b
    c
)

(
  a = while b
    c
) ->

{
  c,
  a: while b
    c
}

[
  a,
  while b
    c
,
  d
]

a(
  a,
  while b
    c
,
  d
)

(
  a,
  d = while b
    c
,
  e
) ->

{
  a,
  d: while b
    e
  c
}

[a, while b then c, d]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  while d then e
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = while e then f
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: (while e then f)
  c
}

`;

exports[`indented-body-while.coffee 3`] = `
[while b then c]

a(until b then c)

(a = while b then c) ->

{c, a: while b then c}

[
  while b
    c
]

a(
  while b
    c
)

(
  a = while b
    c
) ->

{
  c
  a: while b
    c
}

[
  a
  while b
    c
  d
]

a(
  a
  while b
    c
  d
)

(
  a
  d = while b
    c
  e
) ->

{
  a
  d: while b
    e
  c
}

[
  a
  while b then c
,
  d
]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  while d then e
,
  c
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d = while e then f
,
  c
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  d: while e then f
  c
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[while b then c]

a(until b then c)

(a = while b then c) ->

{ c, a: (while b then c) }

[
  while b
    c
]

a(
  while b
    c
)

(
  a = while b
    c
) ->

{
  c,
  a: while b
    c
}

[
  a,
  while b
    c
,
  d,
]

a(
  a,
  while b
    c
,
  d,
)

(
  a,
  d = while b
    c
,
  e,
) ->

{
  a,
  d: while b
    e
  c,
}

[a, while b then c, d]

a(
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  while d then e
  c,
)

(
  a = bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d = while e then f
  c,
) ->

{
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
  d: (while e then f)
  c,
}

`;

exports[`object.coffee 1`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc
  dddddddddd: eeee
}

{
  aaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({
  aaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc
  ddddddddd: e
}) ->

`;

exports[`object.coffee 2`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  dddddddddd: eeee
}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc,
  dddddddddd:
    eeee
}

({
  aaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  ddddddddd: e
}) ->

`;

exports[`object.coffee 3`] = `
a: b

BREAK

a: b
c: d

BREAK

{a, b: c}

{aaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, dddddddddd: eeee}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc
  dddddddddd:
    eeee
}

({aaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc, ddddddddd: e}) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b

BREAK

a: b
c: d

BREAK

{ a, b: c }

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  dddddddddd: eeee,
}

{
  aaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb:
    ccccccccccccccc,
  dddddddddd:
    eeee,
}

({
  aaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbb: ccccccccccccccc,
  ddddddddd: e,
}) ->

`;

exports[`object-as-item.coffee 1`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

{h, i: {a, b: c}, j: d: e, f: g}

i: {a, b: c}, j: d: e, f: g

i: {a, b: c}, j: h

({a, b: c}, h) ->

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: {a, b: c}
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i:
    {a, b: c}
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: {a, b: c}
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  {a, b: c}
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: {a, b: c}
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: {a, b: c}
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{a, b: c}]

f({a, b: c})

({a, b: c}) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

{
  f
  d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
}

d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
) ->

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

{ h, i: { a, b: c }, j: d: e, f: g }

i: { a, b: c }
j: d: e, f: g

i: { a, b: c }
j: h

({ a, b: c }, h) ->

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: { a, b: c }
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i: { a, b: c }
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: { a, b: c }
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  { a, b: c }
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c }
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: { a, b: c }
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: { a, b: c }
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

({ a, b: c }) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
)

{
  f
  d:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
}

d:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
) ->

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c }
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
]

f(
  { a, b: c }
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
)

`;

exports[`object-as-item.coffee 2`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

{h, i: {a, b: c}, j: d: e, f: g}

i: {a, b: c}, j: d: e, f: g

i: {a, b: c}, j: h

({a, b: c}, h) ->

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: {a, b: c}
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i:
    {a, b: c}
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: {a, b: c}
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  {a, b: c}
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: {a, b: c}
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: {a, b: c}
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{a, b: c}]

f({a, b: c})

({a, b: c}) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

{
  f
  d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
}

d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
) ->

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

{ h, i: { a, b: c }, j: d: e, f: g }

i: { a, b: c }
j: d: e, f: g

i: { a, b: c }
j: h

({ a, b: c }, h) ->

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l,
  i: { a, b: c },
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l,
  i: { a, b: c },
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: { a, b: c }
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  { a, b: c },
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c },
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l,
  h: { a, b: c },
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: { a, b: c }
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

({ a, b: c }) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a,
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
)

{
  f,
  d:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
}

d:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }
) ->

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
]

f(
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd
)

`;

exports[`object-as-item.coffee 3`] = `
[{a, b: c}, d: e, f: g, h]

f({a, b: c}, d: e, f: g, h)

{h, i: {a, b: c}, j: d: e, f: g}

i: {a, b: c}, j: d: e, f: g

i: {a, b: c}, j: h

({a, b: c}, h) ->

[
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e, f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

{
  l
  i: {a, b: c}
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

{
  l
  i:
    {a, b: c}
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
}

i: {a, b: c}
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  {a, b: c}
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
) ->

[
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
]

f(
  {a, b: c}
  d: e
  f: g
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
)

# trailing implicit object
[{a, b: c}, d: e, f: g]

f({a, b: c}, d: e, f: g)

[
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  {a, b: c}
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l
  h: {a, b: c}
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: {a, b: c}
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{a, b: c}]

f({a, b: c})

({a, b: c}) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
]

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
)

{
  f
  d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
}

d: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  {a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
) ->

# non-trailing explicit object not adjacent to implicit object
[{a, b: c}, d]

f({a, b: c}, d)

[{a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd]

f({a, b: c}, ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[{ a, b: c }, { d: e, f: g }, h]

f { a, b: c }, { d: e, f: g }, h

{ h, i: { a, b: c }, j: d: e, f: g }

i: { a, b: c }
j: d: e, f: g

i: { a, b: c }
j: h

({ a, b: c }, h) ->

[
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
]

f(
  { a, b: c }
,
  d: e, f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
)

{
  l,
  i: { a, b: c },
  j: d: e, f: g
  k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
}

{
  l,
  i: { a, b: c },
  j:
    d: e, f: g
  k:
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
}

i: { a, b: c }
j: d: e, f: g
k: hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh

(
  { a, b: c },
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
) ->

[
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
]

f(
  { a, b: c }
,
  d: e
  f: g
,
  hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh,
)

# trailing implicit object
[{ a, b: c }, { d: e, f: g }]

f { a, b: c }, d: e, f: g

[
  { a, b: c }
,
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
]

f(
  { a, b: c },
  d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
)

{
  l,
  h: { a, b: c },
  i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg
}

h: { a, b: c }
i: d: e, f: gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg

# trailing explicit object
[{ a, b: c }]

f { a, b: c }

({ a, b: c }) ->

[
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
]

f aaaaaaaaaaaaaaaaaaaaaaaaaaaaa, {
  a,
  b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc,
}

f(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
)

{
  f,
  d:
    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
}

d:
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
e: { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc }

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  { a, b: cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc },
) ->

# non-trailing explicit object not adjacent to implicit object
[{ a, b: c }, d]

f { a, b: c }, d

[
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd,
]

f(
  { a, b: c },
  ddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddddd,
)

`;

exports[`params.coffee 1`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
) ->

`;

exports[`params.coffee 2`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
) ->

`;

exports[`params.coffee 3`] = `
(a) ->

(a, b) ->

(aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa, bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb) ->
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
(a) ->

(a, b) ->

(
  aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa,
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb,
) ->

`;
